Fix bullet point wrapped line alignment

--- a/_sass/my.scss
+++ b/_sass/my.scss
@@ -48,6 +48,7 @@ body { background-color: #222121; }
         text-align: left;
     }
     .description li {
+        display: block;
         list-style: none;
         position: relative;
         margin-left: 0;
